--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: 'Alex Brush';
+  src: url('fonts/AlexBrush-Regular.ttf') format('truetype');
+}
+
 html, body {
   width: 100vw;
   height: 100vh;
