--- a/styles.css
+++ b/styles.css
@@ -16,16 +16,15 @@ html, body {
   overflow: hidden;
   font-family: 'Alex Brush';
   color: snow;
+  font-size: 32px;
 }
 
-h1 {
-  font-size: 5.9vw;
+h4 {
+  font-weight: 100;
 }
-h2 {
-  font-size: 3.0vh;
-}
-p {
-  font-size: 2vmin;
+
+.title {
+  font-size: 90px;
 }
 
 .main {
@@ -45,7 +44,7 @@ p {
 
 .section {
   display: flex;
-  height: 100vh;
+  height: min(100vh, 150vw);
   width: 100vw;
   overflow: hidden;
   flex-direction: column;
